<resources>
    <string name="app_name">BoaViagem</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="bemvindo">"Bem-vindo ao Boa Viagem"</string>
    <string name="invalid_username">"Não é um login válido"</string>
    <string name="invalid_password">"Senha incorreta"</string>
    <string name="falha_login">"Erro ao efetuar o login"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="destino">Destino</string>
    <string name="gasto">Gasto</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negocios</string>
    <string name="data_de_chegada">Data de Chegada</string>
    <string name="data_da_partida">Data da Partida</string>
    <string name="orcamento">Orçamento</string>
    <string name="nova_viagem">Viagem</string>
    <string name="viagens">Viagens</string>
    <string name="periodoViagem"></string>
    <string name="salvar_gasto">Salvar Gasto</string>
    <string name="title_activity_principal">Principal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu">Menu</string>
    <string name="configuracao">Config</string>
</resources>