<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viagem"
            type="org.senac.gabrielkraetzer.boaviagem.ui.viagem.FragmentViagem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.gasto.fragmentViagem"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/destino"
            app:layout_constraintBottom_toTopOf="@+id/edDestinoViagem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.694"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edDestinoViagem"
            android:layout_width="379dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:width="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="55dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="Tipo Viagem"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="111dp" />

        <RadioGroup
            android:id="@+id/grupoTipoViagem"
            android:layout_width="374dp"
            android:layout_height="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="142dp">


            <RadioButton
                android:id="@+id/tipoLazer"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:text="@string/lazer" />

            <RadioButton
                android:id="@+id/tipoNegocios"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/negocios" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/data_de_chegada"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="197dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="92dp"
            android:layout_marginRight="92dp"
            android:text="@string/data_da_partida"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="197dp" />

        <EditText
            android:id="@+id/dataChegadaViagem"
            android:layout_width="147dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="227dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/dataPartidaViagem"
            android:layout_width="157dp"
            android:layout_height="44dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="227dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/orcamento"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="291dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edOrcamentoViagem"
            android:layout_width="376dp"
            android:layout_height="41dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="326dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="Quantidade de Pessoas"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="394dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edQtdPessoasViagem"
            android:layout_width="131dp"
            android:layout_height="42dp"
            android:layout_marginStart="49dp"
            android:layout_marginLeft="49dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            tools:layout_editor_absoluteY="386dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btNovaViagem"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="216dp"
            android:layout_height="53dp"
            android:text="Criar nova viagem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="451dp"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>